<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarContactoActivity">

    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/contentDescriptionImg"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="139dp"
        android:layout_height="93dp"
        android:contentDescription="@string/contentDescriptionImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logouth" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/labelNombre"
        app:layout_constraintBottom_toTopOf="@+id/pais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/pais"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/paises"
        app:layout_constraintBottom_toTopOf="@+id/numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numero"
        android:layout_width="366dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/labelNumero"
        app:layout_constraintBottom_toTopOf="@+id/nota"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nota"
        android:layout_width="364dp"
        android:layout_height="108dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="152dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/labelNota"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/agregarfoto"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="69dp"
        android:text="@string/labelTomarFoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="161dp"
        android:layout_height="49dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="69dp"
        android:text="@string/labelGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="20dp"
        android:text="@string/labelCargarFoto"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>